# FlecsInnerCodeVisualizer

./: .clang-format  .gitmodules  CMakeLists.txt  ReadMe.md
glad/: CMakeLists.txt
glad/include/glad/: gl.h
imgui/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.hpp  context.cpp  context.hpp  main.cpp
